Final Search method update