@@ -1,9 +1,11 @@
+import java.time.LocalDateTime;
+import java.util.Calendar;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.Date;
 import java.util.LinkedList;
 import java.util.ListIterator;
-import java.util.Map;
+//import java.util.Map;
 import java.util.TreeMap;
 
 
@@ -13,6 +15,10 @@ public class Company {
 	 *A binary tree of all the employees in the company
 	 */
 	private TreeMap<Integer,Employee> employees = new TreeMap<Integer,Employee>();
+	private Long searchStart;
+	private Long searchEnd;
+	private Float searchTime;
+	
 	
 	/**
 	 * this search  method will accept a string of employee id's and find the times where non of the members of staff are in meetings
@@ -29,12 +35,13 @@ public class Company {
 	 * @return
 	 */
 	public LinkedList<Meeting> search(int[] ids, Date startTime, Date endTime) {
+		searchStart = System.nanoTime();
 	 Employee[] listOfEmployee= new Employee[ids.length]; 
 	LinkedList<Meeting> totalMeetings = new LinkedList<Meeting>();
 	for(int i = 0; i < ids.length; i++) {	
 		listOfEmployee[i] = new Employee();
 		 listOfEmployee[i] = employees.get(ids[i]);
-		 totalMeetings = listOfEmployee[i].getMeetings(startTime,endTime);
+		 totalMeetings.addAll(listOfEmployee[i].getMeetings(startTime,endTime));
 		}
 	totalMeetings = this.mergeMeetings(totalMeetings);
 	
@@ -67,6 +74,12 @@ public class Company {
 		return totalMeetings; 
 	}
 	
+	
+	/**
+	 * 
+	 * @param totalMeetings
+	 * @return
+	 */
 	private LinkedList<Meeting> mergeMeetings(LinkedList<Meeting> totalMeetings) {
 		Collections.sort(totalMeetings, new Comparator<Meeting>() {
 		    public int compare(Meeting meeting1,  Meeting meeting2) {
@@ -76,14 +89,20 @@ public class Company {
 	
 	
 
-		for (int i = 0; i< totalMeetings.size()-1; i++) {
+		for (int i = 0; i< totalMeetings.size(); i++) {
 			Meeting meeting1 = totalMeetings.get(i);
 			Meeting meeting2 = totalMeetings.get(i+1);
-			if(meeting1.getEndTime().compareTo(meeting2.getStartTime())> 0 ) {
+			if(meeting1.getEndTime().compareTo(meeting2.getStartTime())> 0 && meeting1.getEndTime().compareTo(meeting2.getEndTime()) < 0) {
+				if(meeting1.getEndTime().compareTo(meeting2.getEndTime()) < 0)
 				totalMeetings.get(i).setEndTime(meeting2.getEndTime());
 				totalMeetings.remove(i+1);
+				i--;
+				
+			}else {
+					totalMeetings.remove(i+1);
+				}
 			}
-		}	
+		
 		
 		return totalMeetings;
 		
@@ -121,7 +140,7 @@ public class Company {
 	 * eg. edit
 	 * @param id as the id of the employee that is to be edited
 	 */
-	public Employee selectEmployee(String id) {
+	public Employee selectEmployee(int id) {
 		try {
 			return employees.get(id);
 			
@@ -135,14 +154,19 @@ public class Company {
 	
 	@SuppressWarnings("deprecation")
 	public void addTestMeetings() {
-		int counter = 0;
-	
-		for(Map.Entry<Integer,Employee> me : employees.entrySet()) {
+		//int counter = 0;
+		
+		 employees.get(123).addMeeting(new Date(2018, 7, 7, 12 , 00, 00), new Date(2018, 7, 7, 12,50, 00), "Meetings overlap test");
+		 employees.get(145).addMeeting(new Date(2018, 7, 7, 12 , 30, 00), new Date(2018, 7, 7, 13,10, 00), "Meetings overlap test");
+		 
+		 employees.get(123).addMeeting(new Date(2018, 7, 7, 13 , 30, 00), new Date(2018, 7, 7, 13,45, 00), "Meetings overlap test");
+		 employees.get(145).addMeeting(new Date(2018, 7, 7, 13 , 5, 00), new Date(2018, 7, 7, 13,50, 00), "Meetings overlap test");
+	/*	for(Map.Entry<Integer,Employee> me : employees.entrySet()) {
 	      counter++;
 	      System.out.print("Key is: "+me.getKey() + " & ");
 	      System.out.println("Value is: "+ employees.get(me.getKey()));
-	      Date startTime = new Date(2018, 7, 7+ counter, 12 , 00, 00);
-	      Date endTime = new Date(2018, 7, 7+counter, 12,30, 00);
+	      Date startTime = new Date(2018, 7, 7, 12 , 00, 00);
+	      Date endTime = new Date(2018, 7, 7, 12,30, 00);
 	      employees.get(me.getKey()).setDiary(new Diary());
 	     employees.get(me.getKey()).addMeeting(startTime, endTime, "This is a test meeting");
 	     
@@ -153,15 +177,27 @@ public class Company {
 	     
 	     employees.get(me.getKey()).getDiary().printDiary();;
 	     
-		}
+		}*/
 	   }
 	
+	/**
+	 * Method to find the times between the unavailable times employees
+	 * @param startTime as the start time entered by the user
+	 * @param endTimeas the end time entered by the user
+	 * @param totalMeetings as the linked list of meetings that the emplpoyees have
+	 * @param timesBetween
+	 * @return
+	 */
 	public LinkedList<Meeting> getTimesBetween(Date startTime,Date endTime, LinkedList<Meeting> totalMeetings, LinkedList<Meeting> timesBetween) {
-		timesBetween.add(new Meeting(startTime,totalMeetings.get(0).getStartTime(),""));
+	
+		timesBetween.add(new Meeting(startTime,totalMeetings.getFirst().getStartTime(),""));
 		for(int i =0; i < totalMeetings.size()-1; i++) {
 			timesBetween.add(new Meeting(totalMeetings.get(i).getEndTime(),totalMeetings.get(i+1).getStartTime(),""));	
 		}
-		timesBetween.add(new Meeting(totalMeetings.getLast().getStartTime(),endTime,""));
+		timesBetween.add(new Meeting(totalMeetings.getLast().getEndTime(),endTime,""));
+		searchEnd = System.nanoTime();
+		searchTime = (float)(searchEnd-searchStart)/1000000;
+		System.out.println(searchTime/1000 + " s");
 		return timesBetween;
 	}
 }
